# pdf-craft-cloud

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/file-pdf-to-epub/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/file-pdf-to-markdown/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/pdf-to-epub/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url-pdf-to-epub/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/url-pdf-to-markdown/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/pdf-converter/: __init__.py  task.oo.yaml
tasks/pdf-to-epub-submit/: __init__.py  task.oo.yaml
tasks/pdf-to-markdown/: __init__.py  task.oo.yaml
tasks/poll-pdf-to-markdown/: __init__.py  task.oo.yaml
tasks/poll-pdf-transform/: __init__.py  task.oo.yaml
